src/tooling/editor-support/tree-sitter-vibee/test/corpus/comments.txt
================================================================================
Comments
================================================================================

# This is a comment
name: test

# Another comment
version: "1.0.0"

--------------------------------------------------------------------------------

(source_file
  (comment)
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (comment)
  (pair
    key: (section_keyword)
    value: (quoted_string (string_content))))

================================================================================
Section header comments
================================================================================

# ============================================================================
# Types Section
# ============================================================================
types:

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (pair
    key: (section_keyword)))
