src/tooling/editor-support/tree-sitter-vibee/test/corpus/constants.txt
================================================================================
Simple constants
================================================================================

constants:
  PHI: 1.618
  DIM: 10000

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword))
  (pair
    key: (identifier (plain_identifier))
    value: (float_number))
  (pair
    key: (identifier (plain_identifier))
    value: (number)))

================================================================================
Constants with boolean
================================================================================

constants:
  ENABLED: true
  DEBUG: false

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword))
  (pair
    key: (identifier (plain_identifier))
    value: (boolean))
  (pair
    key: (identifier (plain_identifier))
    value: (boolean)))
