src/tooling/editor-support/tree-sitter-vibee/test/corpus/metadata.txt
================================================================================
Basic metadata
================================================================================

name: my_module
version: "1.0.0"
language: zig
module: my_module

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (pair
    key: (section_keyword)
    value: (quoted_string (string_content)))
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier))))

================================================================================
Metadata with author and license
================================================================================

name: firebird
version: "2.0.0"
language: zig
author: "Dmitrii Vasilev"
license: "MIT"

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (pair
    key: (section_keyword)
    value: (quoted_string (string_content)))
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (pair
    key: (section_keyword)
    value: (quoted_string (string_content)))
  (pair
    key: (section_keyword)
    value: (quoted_string (string_content))))

================================================================================
Language as flow sequence
================================================================================

language: [zig, python, typescript]

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword)
    value: (flow_sequence
      (identifier (plain_identifier))
      (identifier (plain_identifier))
      (identifier (plain_identifier)))))
