src/tooling/editor-support/tree-sitter-vibee/test/corpus/types.txt
================================================================================
Type with fields
================================================================================

types:
  MyType:
    fields:
      name: String
      count: Int

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (section_keyword))
  (pair
    key: (identifier (plain_identifier)))
  (pair
    key: (type_keyword))
  (pair
    key: (section_keyword)
    value: (identifier (plain_identifier)))
  (pair
    key: (identifier (plain_identifier))
    value: (identifier (plain_identifier))))

================================================================================
Generic type expressions
================================================================================

fields:
  items: List<String>
  mapping: Map<String,Int>
  maybe: Option<Float>

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (type_keyword))
  (pair
    key: (identifier (plain_identifier))
    value: (type_expression
      name: (generic_type_name)
      (type_argument (identifier (plain_identifier)))))
  (pair
    key: (identifier (plain_identifier))
    value: (type_expression
      name: (generic_type_name)
      (type_argument (identifier (plain_identifier)))
      (type_argument (identifier (plain_identifier)))))
  (pair
    key: (identifier (plain_identifier))
    value: (type_expression
      name: (generic_type_name)
      (type_argument (identifier (plain_identifier))))))

================================================================================
Enum definition
================================================================================

enum:
  - zig
  - python
  - javascript

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (type_keyword))
  (list_item
    (identifier (plain_identifier)))
  (list_item
    (identifier (plain_identifier)))
  (list_item
    (identifier (plain_identifier))))

================================================================================
Type with constraints
================================================================================

constraints:
  - "value >= 0"
  - "value <= 100"

--------------------------------------------------------------------------------

(source_file
  (pair
    key: (type_keyword))
  (list_item
    (quoted_string (string_content)))
  (list_item
    (quoted_string (string_content))))
